[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kite-png2ass"
version = "1.1.0"
description = "Convert PNG images into ASS drawing text for Aegisub"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kiterow" },
]
keywords = ["aegisub", "ass", "subtitle", "png", "vectorization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "Pillow>=10.0",
  "opencv-python>=4.8",
  "numpy>=1.26",
  "svg2ssa>=2022.12.23.0",
  "defusedxml>=0.7",
  "vtracer>=0.6",
]

[project.urls]
Homepage = "https://github.com/Kitherow/kite-png2ass"
Repository = "https://github.com/Kitherow/kite-png2ass"
Issues = "https://github.com/Kitherow/kite-png2ass/issues"

[project.scripts]
kite-png2ass = "ass_png2ass:cli"

[tool.setuptools]
py-modules = ["ass_png2ass"]
